buildscript {
    ext {
        springBootVersion = '2.5.3'
    }
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
    }
}

plugins {
    id 'java'
    id 'eclipse'
    id 'idea'
    id 'org.springframework.boot' version '2.1.3.RELEASE'
    id 'io.spring.dependency-management' version '1.0.7.RELEASE'
    id 'no.nils.wsdl2java' version '0.10'
}

sourceCompatibility = 1.11

repositories {
    mavenCentral()
    flatDir {
        dirs 'lib'
    }
}

dependencies {
    compile('org.springframework.boot:spring-boot-starter-data-jpa')
    compile('org.springframework.boot:spring-boot-starter-web')
    compile('org.springframework.boot:spring-boot-starter-actuator')
    compile('org.springframework.cloud:spring-cloud-starter-aws')
    compile('io.micrometer:micrometer-registry-cloudwatch:1.0.6')
    compile('org.apache.cxf:cxf-spring-boot-starter-jaxws:3.4.3')
    compile('org.apache.cxf:cxf-rt-features-logging:3.3.0')
    compile name: 'ojdbc8'
    compileOnly "org.projectlombok:lombok:1.18.18"
    annotationProcessor 'org.projectlombok:lombok:1.18.6'
    testCompile('org.springframework.boot:spring-boot-starter-test')
    compile 'com.amazonaws:aws-xray-recorder-sdk-spring:1.3.1'
    compile 'org.aspectj:aspectjrt:1.9.2'

    wsdl2java 'com.sun.xml.bind:jaxb-xjc:2.3.2'
    wsdl2java 'javax.xml.bind:jaxb-api:2.3.1'
    wsdl2java 'javax.xml.ws:jaxws-api:2.3.1'
    wsdl2java 'org.apache.cxf:cxf-rt-wsdl:3.2.7'
    wsdl2java 'javax.jws:javax.jws-api:1.1'

    implementation 'com.sun.xml.bind:jaxb-xjc:2.3.0.1'
    implementation 'javax.xml.bind:jaxb-api:2.3.1'
    implementation 'javax.xml.ws:jaxws-api:2.3.1'
    implementation 'org.apache.cxf:cxf-rt-wsdl:3.2.7'
    implementation 'javax.jws:javax.jws-api:1.1'
    compile 'javax.activation:activation:1.1.1'
}
wsdl2java{
    wsdlsToGenerate = [
            ["$projectDir/src/main/resources/wsdl/LIBRAService.wsdl"]
    ]
    generatedWsdlDir = file("$buildDir/generated-sources/wsdl")
    wsdlDir = file("src/main/resources/wsdl")
}

wsdl2javaExt {
    cxfVersion = "3.3.0"
}

bootJar {
    baseName = 'nolasa'
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:Finchley.RELEASE"
    }
}